dist_man1_MANS=

if BUILD_CEDICOIND
  dist_man1_MANS+=cedicoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=cedicoin-qt.1
endif

if BUILD_CEDICOIN_CLI
  dist_man1_MANS+=cedicoin-cli.1
endif

if BUILD_CEDICOIN_TX
  dist_man1_MANS+=cedicoin-tx.1
endif

if ENABLE_WALLET
if BUILD_CEDICOIN_WALLET
  dist_man1_MANS+=cedicoin-wallet.1
endif
endif
